--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <script type="text/javascript">
       d3.select("body").append("p").text("hey does this work????");
-      var dataset = [frog,dog,cat,lion,lobster,pandas, chinchillas];
+      var dataset = ["frog","dog","cat","lion","lobster","pandas", "chinchillas"];
       d3.select("body").selectAll("p")
         .data(dataset)
         .enter()
