--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script text/javascript>
       d3.select("body").append("p").text("Hey does this work????");
       var dataset = ["frog","dog","cat","lion","lobster","pandas", "chinchillas"];
-      d3.select("body").append("ol")
-      d3.select("ol").selectAll("li")
+      d3.select("body").append("ul")
+      d3.select("ul").selectAll("li")
         .data(dataset)
         .enter()
         .append("li")
         .text(function(d) { return d; });
     </script>
-    <script text/css>
+    <script>
       body { background-color:lightcyan; }
         
     </script>
