--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <script text/javascript>
-      d3.select("body").append("p").text("Hey does this work????");
+      d3.select("body").append("h1").text("Making a website using D3");
+      d3.select("body").append("p").text("Every Element Added has been added using ");
       var dataset = ["frog","dog","cat","lion","lobster","pandas", "chinchillas"];
       d3.select("body").append("ul")
       d3.select("ul").selectAll("li")
