--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         .append("li")
         .text(function(d) { return d; });
       d3.select("body").append("table")
-      d3.select("table").append("tr")
-      d3.select("tr").append("th").text("Table Heading")
-      d3.select("tr").append("th").text("Table Heading")
-      d3.select("tr").append("th").text("Table Heading")
-      d3.select("table").append("tr")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("table").append("tr")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
+      var row = d3.select("table").append("tr")
+      d3.select(row).append("th").text("Table Heading")
+      d3.select(row).append("th").text("Table Heading")
+      d3.select(row).append("th").text("Table Heading")
+      var row2 = d3.select("table").append("tr")
+      d3.select(row2).append("td").text("Table Data")
+      d3.select(row2).append("td").text("Table Data")
+      d3.select(row2).append("td").text("Table Data")
+      var row3 = d3.select("table").append("tr")
+      d3.select(row3).append("td").text("Table Data")
+      d3.select(row3).append("td").text("Table Data")
+      d3.select(row3).append("td").text("Table Data")
       
       
     </script>
