--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       d3.select("tr").append("th").text("Table Heading")
       d3.select("tr").append("th").text("Table Heading");
       d3.select("table").append("tr")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data");
+      d3.select("tr").append("td").text("I")
+      d3.select("tr").append("td").text("Tried")
+      d3.select("tr").append("td").text("To");
       d3.select("table").append("tr")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data")
-      d3.select("tr").append("td").text("Table Data");
+      d3.select("tr").append("td").text("Make")
+      d3.select("tr").append("td").text("A")
+      d3.select("tr").append("td").text("Table");
       
-      
+      d3.select("body").append("p").text("Some slight issues arose as how to identify different rows in order to append was not possible with my knowledge of d3 thus far");
     </script>
   </body>
   </html>
